# skill-bench

./: .env.example  .gitignore  Dockerfile  EXAMPLE_TRACE.json  TRACING.md  TRACING_CHECKLIST.md  TRACING_IMPLEMENTATION.md  TRACING_QUICKSTART.md  deploy.sh  docker-compose.yaml  pyproject.toml
engine/: cli.py  hill_climb.py  loader.py  models.py  runner.py  scorer.py
service/: app.py  config.py  db.py  events.py  miner.py  optimizer.py  sandbox.py  sandbox_cli.py  schema.sql  scorer.py  trace_formatter.py  tracing.py  worker.py
service/models/: jobs.py  mining.py  results.py  skills.py  tasks.py
service/routes/: jobs.py  mining.py  results.py  skills.py  tasks.py
service/static/: app.js  index.html  style.css
tasks/: add_endpoint.yaml  api_design.yaml  code_only.yaml  concise_answer.yaml  create_dockerfile.yaml  explain_code.yaml  fix_bug_multiturn.yaml  refactor_suggestion.yaml  structured_response.yaml
