[project]
name = "skill-bench"
version = "0.1.0"
description = "Benchmark engine for evaluating and hill-climbing Claude Code skills"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "jsonlines>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
skill-bench = "engine.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
