[project]
name = "skill-bench"
version = "0.2.0"
description = "Eval benchmark service for Claude skills — run, score, and hill-climb"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "jsonlines>=4.0",
    "fastapi[standard]>=0.115.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0", "ruff>=0.5"]

[project.scripts]
skill-bench = "engine.cli:main"
skill-bench-server = "service.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "service"]

[tool.ruff]
line-length = 100
